# playground

./: .gitignore  README.md
Docker/: README.md  docker-compose.yaml
Docker/myapp/: Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml  wsgi.py
Docker/myapp/myapp/: main.py
Docker/myapp/myapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Docker/nginx/: nginx.conf
Observability/: docker-compose.yaml
Observability/grafana/: dashboard.json
Observability/myapp/: #main.go#  .#main.go  Dockerfile  Makefile  go.mod  go.sum  main.go
Observability/myapp/static/: index.html
Observability/prometheus/: prometheus.yaml
