[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Pedro Rodrigues <csixteen@protonmail.com>"]

packages = [
    { include = "myapp" }
]

[tool.poetry.scripts]
start = "myapp.main:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
uvloop = "^0.15.0"
httptools = "^0.1.1"
gunicorn = "^20.0.4"
python-multipart = "^0.0.5"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.800"
pylint = "^2.6.0"
isort = "^5.7.0"
black = "^20.8b1"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
line_length = 90
multi_line_output = 3
from_first = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
